Fix wrapping of person diagram

--- a/src/app/info-popover/info-popover.component.scss
+++ b/src/app/info-popover/info-popover.component.scss
@@ -40,6 +40,7 @@
             max-width: 40rem;
 
             padding: 1.5em;
+            padding-top: 1em;
             margin-left: auto;
             margin-right: auto;
             background: white;
@@ -69,6 +70,7 @@
                 display: inline-block;
                 width: calc(100% - 2em);
                 height: 0;
+                margin-bottom: 1.75em;
             }
 
             button
@@ -106,11 +108,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-
-                div
-                {
-                    position: relative;
-                }
+                flex-wrap: wrap;
 
                 .arrow
                 {
